classDiagram
    %% Core Classes
    class PartitionElement {
        -string id_
        -int64_t size_
        +PartitionElement(string id, int64_t size)
        +id() string
        +size() int64_t
        +operator==(PartitionElement) bool
        +operator!=(PartitionElement) bool
        +ToString() string
    }

    class PartitionInstance {
        -vector~PartitionElement~ elements_
        -int64_t total_sum_
        +PartitionInstance()
        +AddElement(PartitionElement) void
        +SetElements(vector~PartitionElement~) void
        +elements() vector~PartitionElement~
        +total_sum() int64_t
        +size() size_t
        +IsValid() bool
        +IsValidPartition(set~string~) bool
        +ToString() string
        -RecalculateTotalSum() void
    }

    class Triple {
        -string w_
        -string x_
        -string y_
        +Triple(string w, string x, string y)
        +w() string
        +x() string
        +y() string
        +SharesCoordinateWith(Triple) bool
        +operator==(Triple) bool
        +operator!=(Triple) bool
        +ToString() string
    }

    class TripleHash {
        <<struct>>
        +operator()(Triple) size_t
    }

    class ThreeDMInstance {
        -set~string~ w_
        -set~string~ x_
        -set~string~ y_
        -vector~Triple~ m_
        -size_t q_
        +ThreeDMInstance()
        +SetW(set~string~) void
        +SetX(set~string~) void
        +SetY(set~string~) void
        +AddTriple(Triple) void
        +SetTriples(vector~Triple~) void
        +w() set~string~
        +x() set~string~
        +y() set~string~
        +triples() vector~Triple~
        +q() size_t
        +IsValid() bool
        +IsValidMatching(vector~Triple~) bool
        +ToString() string
    }

    %% Interfaces
    class InstanceReader~T~ {
        <<interface>>
        +ReadFromFile(string) T*
        +ReadFromStream(istream) T*
        +GetFormatDescription() string*
    }

    class InstanceWriter~T~ {
        <<interface>>
        +WriteToFile(T, string) void*
        +WriteToStream(T, ostream) void*
        +GetFormatDescription() string*
    }

    class InstanceSolver~Instance, Solution~ {
        <<interface>>
        +Solve(Instance) optional~Solution~*
        +GetAlgorithmName() string*
    }

    class ReductionStrategy {
        <<interface>>
        +Reduce(ThreeDMInstance) PartitionInstance*
        +MapSolutionBack(set~string~, ThreeDMInstance) vector~Triple~*
        +GetDescription() string*
    }

    %% IO Classes
    class PartitionReader {
        +ReadFromFile(string) PartitionInstance
        +ReadFromStream(istream) PartitionInstance
        +GetFormatDescription() string
    }

    class PartitionWriter {
        +WriteToFile(PartitionInstance, string) void
        +WriteToStream(PartitionInstance, ostream) void
        +GetFormatDescription() string
    }

    class ThreeDMReader {
        +ReadFromFile(string) ThreeDMInstance
        +ReadFromStream(istream) ThreeDMInstance
        +GetFormatDescription() string
    }

    class ThreeDMWriter {
        +WriteToFile(ThreeDMInstance, string) void
        +WriteToStream(ThreeDMInstance, ostream) void
        +GetFormatDescription() string
    }

    %% Solvers
    class PartitionSolver {
        <<enumeration>> Algorithm
        -Algorithm algorithm_
        +PartitionSolver(Algorithm)
        +Solve(PartitionInstance) optional~set~string~~
        +GetAlgorithmName() string
        -SolveDynamicProgramming(PartitionInstance) optional~set~string~~
        -SolveBacktracking(PartitionInstance) optional~set~string~~
        -SolveGreedy(PartitionInstance) optional~set~string~~
        -BacktrackHelper(PartitionInstance, size_t, int64_t, int64_t, set~string~) bool
    }

    class SolutionVerifier {
        <<utility>>
        +Verify3DMSolution(ThreeDMInstance, vector~Triple~)$ bool
        +VerifyPartitionSolution(PartitionInstance, set~string~)$ bool
        +Get3DMVerificationReport(ThreeDMInstance, vector~Triple~)$ string
        +GetPartitionVerificationReport(PartitionInstance, set~string~)$ string
    }

    %% Reduction Classes
    class ThreeDMToPartitionReducer {
        -int64_t base_weight_
        -unordered_map~string, Triple~ element_to_triple_map_
        +ThreeDMToPartitionReducer(int64_t)
        +Reduce(ThreeDMInstance) PartitionInstance
        +MapSolutionBack(set~string~, ThreeDMInstance) vector~Triple~
        +GetDescription() string
        -CalculateWeight(size_t, size_t) int64_t
        -CalculateTripleSize(Triple, unordered_map, unordered_map, unordered_map) int64_t
        -CreateIndexMaps(ThreeDMInstance, unordered_map, unordered_map, unordered_map) void
    }

    class ReductionValidator {
        <<utility>>
        +ValidateReduction(ReductionStrategy, ThreeDMInstance, PartitionInstance)$ bool
        +ValidateSolutionMapping(ReductionStrategy, set~string~, vector~Triple~, ThreeDMInstance)$ bool
        +GetValidationReport(ReductionStrategy, ThreeDMInstance, PartitionInstance)$ string
    }

    %% Pipeline
    class ReductionPipeline {
        -shared_ptr~ReductionStrategy~ reduction_strategy_
        -shared_ptr~InstanceReader~ThreeDMInstance~~ three_dm_reader_
        -shared_ptr~InstanceWriter~PartitionInstance~~ partition_writer_
        -shared_ptr~InstanceSolver~PartitionInstance, set~string~~~ partition_solver_
        +ReductionPipeline(shared_ptr, shared_ptr, shared_ptr, shared_ptr)
        +Execute(string, string) string
        +PerformReduction(ThreeDMInstance) PartitionInstance
        +SolveAndMapBack(PartitionInstance, ThreeDMInstance) optional~vector~Triple~~
        -GenerateReport(ThreeDMInstance, PartitionInstance, optional, optional) string
    }

    %% Relationships - Core
    PartitionInstance "1" *-- "many" PartitionElement : contains
    ThreeDMInstance "1" *-- "many" Triple : contains
    Triple ..> TripleHash : uses

    %% Relationships - Interfaces
    InstanceReader~T~ <|.. PartitionReader : implements
    InstanceReader~T~ <|.. ThreeDMReader : implements
    InstanceWriter~T~ <|.. PartitionWriter : implements
    InstanceWriter~T~ <|.. ThreeDMWriter : implements
    InstanceSolver~Instance, Solution~ <|.. PartitionSolver : implements
    ReductionStrategy <|.. ThreeDMToPartitionReducer : implements

    %% Relationships - Dependencies
    PartitionReader ..> PartitionInstance : creates
    PartitionWriter ..> PartitionInstance : uses
    ThreeDMReader ..> ThreeDMInstance : creates
    ThreeDMWriter ..> ThreeDMInstance : uses
    PartitionSolver ..> PartitionInstance : uses
    ThreeDMToPartitionReducer ..> ThreeDMInstance : uses
    ThreeDMToPartitionReducer ..> PartitionInstance : creates
    ThreeDMToPartitionReducer ..> Triple : maps
    SolutionVerifier ..> ThreeDMInstance : verifies
    SolutionVerifier ..> PartitionInstance : verifies
    SolutionVerifier ..> Triple : uses
    ReductionValidator ..> ReductionStrategy : validates
    ReductionValidator ..> ThreeDMInstance : uses
    ReductionValidator ..> PartitionInstance : uses
    ReductionValidator ..> Triple : uses
    ReductionPipeline ..> ReductionStrategy : uses
    ReductionPipeline ..> ThreeDMInstance : uses
    ReductionPipeline ..> PartitionInstance : uses
    ReductionPipeline ..> Triple : uses
    ReductionPipeline "1" o-- "1" InstanceReader~ThreeDMInstance~ : uses
    ReductionPipeline "1" o-- "1" InstanceWriter~PartitionInstance~ : uses